[tool.poetry]
name = "repl-nix-heuristicoptimization"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_heuristicoptimization"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
